--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "h-application",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "web,web-application,application,module,web-module",
   "bin": "./bin/h-application.js",
   "directories": {
@@ -17,13 +17,13 @@
   },
   "author": "kouyjes",
   "license": "ISC",
-  "devDependencies": {
-    "del": "^3.0.0",
-    "gulp": "^3.9.1",
-    "gulp-copy": "^1.0.1"
-  },
   "bugs": {
     "url": "https://github.com/kouyjes/web-application/issues"
   },
-  "homepage": "https://github.com/kouyjes/web-application#readme"
+  "homepage": "https://github.com/kouyjes/web-application#readme",
+  "dependencies": {
+    "del": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-copy": "^1.0.1"
+  }
 }
