--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "h-application",
-  "version": "1.0.13",
+  "version": "1.0.15",
   "description": "web,web-application,application,module,web-module",
   "bin": "./bin/h-application.js",
   "directories": {
@@ -11,19 +11,19 @@
     "start-debug": "node server/server-debug.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kouyjes/web-application.git"
-  },
-  "author": "kouyjes",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/kouyjes/web-application/issues"
-  },
-  "homepage": "https://github.com/kouyjes/web-application#readme",
   "dependencies": {
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-copy": "^1.0.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/h-webapp/cli.git"
+  },
+  "author": "kouyjes",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/h-webapp/cli/issues"
+  },
+  "homepage": "https://github.com/h-webapp/cli#readme"
 }
