--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "h-application",
-  "version": "1.0.20",
+  "version": "1.0.21",
   "description": "web,web-application,application,module,web-module",
   "bin": "./bin/h-application.js",
   "directories": {
@@ -12,7 +12,8 @@
   "dependencies": {
     "del": "^3.0.0",
     "gulp": "^3.9.1",
-    "gulp-copy": "^1.0.1"
+    "gulp-copy": "^1.0.1",
+    "webapp-core": "^1.0.10"
   },
   "repository": {
     "type": "git",
