--- a/vue-template/package.json
+++ b/vue-template/package.json
@@ -18,17 +18,26 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-es2015-block-scoping": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^0.28.7",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-copy": "^1.0.1",
     "gulp-imagemin": "^3.3.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^3.0.0",
-    "jquery": "^3.2.1",
     "merge-stream": "^1.0.1",
-    "nm-web-server": "^1.1.2",
-    "watch": "^1.0.2"
+    "nm-web-server": "^1.1.7",
+    "vue-loader": "^13.0.4",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.4.2",
+    "watch": "^1.0.2",
+    "webpack": "^3.5.6"
   },
   "dependencies": {
     "dom-resource-loader": "^1.0.23",
