--- a/vue-template/package.json
+++ b/vue-template/package.json
@@ -26,11 +26,13 @@
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
+    "gulp-clean-css": "^3.9.0",
     "gulp-concat": "^2.6.1",
     "gulp-copy": "^1.0.1",
     "gulp-imagemin": "^3.3.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^3.0.0",
+    "htmlparser2": "^3.9.2",
     "merge-stream": "^1.0.1",
     "nm-web-server": "^1.1.7",
     "vue-loader": "^13.0.4",
