--- a/vue-template/package.json
+++ b/vue-template/package.json
@@ -22,6 +22,7 @@
     "babel-plugin-transform-es2015-block-scoping": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
+    "clone": "^2.1.1",
     "css-loader": "^0.28.7",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
@@ -34,7 +35,7 @@
     "gulp-uglify": "^3.0.0",
     "htmlparser2": "^3.9.2",
     "merge-stream": "^1.0.1",
-    "nm-web-server": "^1.1.7",
+    "nm-web-server": "^1.1.13",
     "vue-loader": "^13.0.4",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
@@ -42,13 +43,13 @@
     "webpack": "^3.5.6"
   },
   "dependencies": {
-    "dom-resource-loader": "^1.0.23",
+    "dom-resource-loader": "^1.0.32",
     "injector-ioc": "^1.1.8",
     "jquery": "^3.2.1",
     "lz-string": "^1.4.4",
     "promise-deferred-sim": "^1.0.2",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
-    "webapp-core": "^1.0.20"
+    "webapp-core": "^1.0.22"
   }
 }
