--- a/vue-template/package.json
+++ b/vue-template/package.json
@@ -22,6 +22,7 @@
     "babel-plugin-transform-es2015-block-scoping": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.17",
     "clone": "^2.1.1",
     "css-loader": "^0.28.7",
     "del": "^3.0.0",
@@ -33,9 +34,12 @@
     "gulp-imagemin": "^3.3.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^3.0.0",
+    "html-webpack-plugin": "^2.30.1",
     "htmlparser2": "^3.9.2",
     "merge-stream": "^1.0.1",
     "nm-web-server": "^1.1.13",
+    "style-loader": "^0.19.1",
+    "uglifyjs-webpack-plugin": "^1.1.5",
     "vue-loader": "^13.0.4",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
@@ -50,6 +54,6 @@
     "promise-deferred-sim": "^1.0.2",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
-    "webapp-core": "^1.0.22"
+    "webapp-core": "^1.0.28"
   }
 }
